@@ -1,15 +1,24 @@
-ALLSAMPLES = $(basename $(wildcard *-sample.md))
-ALLPDF = $(addsuffix .pdf,$(ALLSAMPLES))
+EXAMPLES = $(basename $(wildcard *-sample.md))
+ALLPDF = $(addsuffix .pdf,$(EXAMPLES))
+ALLHTML = $(addsuffix .html,$(EXAMPLES))
 
 PANDOC_VERSION=$(shell pandoc --version | perl -E '<> =~ /pandoc (\d+\.\d+)/ && print $$1')
 
-all: ${ALLPDF}
+all: html pdf
+new: clean all
+pdf: ${ALLPDF}
+html: ${ALLHTML}
 
 %.pdf: %.md
-	@echo $(subst -sample.md,.pl,$<)
+	@echo $@
 	@PANDOC_VERSION=$(PANDOC_VERSION) PERL5LIB=../lib \
-		pandoc --filter ./$(subst -sample.md,.pl,$<) $< -o $@
+		pandoc -s -S --filter ./$(subst -sample.md,.pl,$<) $< -o $@
+
+%.html: %.md
+	@echo $@
+	@PANDOC_VERSION=$(PANDOC_VERSION) PERL5LIB=../lib \
+		pandoc -s -S --filter ./$(subst -sample.md,.pl,$<) $< -o $@
 	
 clean:
-	@$(RM) -f ${ALLPDF} *.pyc 
-	@$(RM) -rf *-images
+	@rm -f *.pdf *.png *.html
+
